crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/expected_array_length_expression/state_variable/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Expected array length expression.
   ╭─[input.sol:5:5]
   │
 5 │     uint[1:2] x;
   │     ────┬────  
   │         ╰────── Error occurred here.
───╯
